--- a/layouts/partials/single_article.html
+++ b/layouts/partials/single_article.html
@@ -14,10 +14,12 @@
 
         {{ partial "prev_next_post" . }}
     </article>
+    {{ if or ( not ( isset .Params "comments")) (eq .Params.comments true) }}
     <section id="comments">
         <div id="disqus_thread">
             {{ template "_internal/disqus.html" . }}
         </div>
     </section>
+    {{end}}
 
 </section>
